# UPS-GCNet

./: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  run_diligent.sh  run_eventups.sh  run_lightstage.sh  run_model.py
.github/workflows/: docker-publish.yml
data/models_ECCV2020/: .gitignore
datasets/: __init__.py  pms_transforms.py  ups_DiLiGenT_dataset.py  ups_GourdApple_dataset.py  ups_Harvard_dataset.py  ups_LightStage_dataset.py  ups_synth_dataset.py  ups_synth_test_dataset.py  util.py
models/: GCNet_N_model.py  GCNet_model.py  L_N_model.py  L_model.py  N_model.py  __init__.py  base_model.py  model_utils.py
models/archs/: GCNet.py  LCNet.py  L_Net.py  N_Net.py  PS_FCN.py
options/: base_opts.py  run_model_opts.py  train_opts.py
scripts/: convert_gourd_apple_to_numpy.py  crop_DiLiGenT_data.py
utils/: draw_utils.py  eval_utils.py  logger.py  recorders.py  test_utils.py  time_utils.py  train_utils.py  utils.py
