[project]
name = "ups-gcnet"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "YouSiki", email = "you.siki@outlook.com" }]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "imageio>=2.37.0",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "pywavelets>=1.8.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "six>=1.17.0",
    "tifffile>=2025.2.18",
    "cycler>=0.12.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ups_gcnet"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
